Logica van UC2 geimplementeerd in GUI
(behalve laatste stap + kan  niet testen door errors met imgs van dominotegels)