@@ -1,7 +1,11 @@
 package domein;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Deque;
+import java.util.List;
+import java.util.Locale;
+import java.util.ResourceBundle;
 
 import dto.SpelDTO;
 import dto.SpelerDTO;
@@ -17,8 +21,8 @@ public class DomeinController {
 		spel = new Spel();
 	}
 
-	public void voegSpelersToe(List<SpelerDTO> spelerDTOS){
-		for(SpelerDTO speler : spelerDTOS){
+	public void voegSpelersToe(List<SpelerDTO> spelerDTOS) {
+		for (SpelerDTO speler : spelerDTOS) {
 			spel.voegSpelersToe(new Speler(speler.gebruikersnaam(), speler.geboortejaar(), speler.aantalGewonnen(),
 					speler.aantalGespeeld(), speler.koninkrijk(), speler.scores(), speler.isWinnaar()));
 		}
@@ -39,23 +43,32 @@ public class DomeinController {
 		}
 		return overzicht;
 	}
-	public SpelDTO geefSpelDTO(){
+
+	public SpelDTO geefSpelDTO() {
 		List<List<Dominotegel>> kolommen = new ArrayList<>();
-		for(int i = 0; i < 12; i++){
+		for (int i = 0; i < 12; i++) {
 			kolommen.add(spel.geefBeginOfEindKolom());
 		}
 		return new SpelDTO(kolommen, spel.isEindeSpel());
 	}
+
 	public static List<String> geefAlleKleuren() {
 		List<Kleuren> kleuren = Arrays.asList(Kleuren.values());
-		return kleuren.stream().map(Enum::toString).collect(Collectors.toList());
+		return kleuren.stream().map(Enum::toString).toList();
 	}
+
 	public List<Dominotegel> schudDominotegels(int aantalSpelers) {
 		return spel.schudDominotegels(aantalSpelers);
 	}
-	public void berekenWinnaars(){
+
+	public List<Dominotegel> geefTegels(int aantal) {
+		return spel.geefTegels(aantal);
+	}
+
+	public void berekenWinnaars() {
 		spel.berekenWinnaars();
 	}
+
 	public List<String> geefKleurenInTaal(Locale locale) {
 		ResourceBundle colors = ResourceBundle.getBundle("utils.resource_bundle", locale);
 		List<String> kleurTaal = new ArrayList<>();
@@ -63,6 +76,10 @@ public class DomeinController {
 			kleurTaal.add(colors.getString(kleur.name()));
 		}
 		return kleurTaal;
+	}
+
+	public List<Dominotegel> plaatsTegelsInStartkolom(Deque<Dominotegel> gekozenTegels) {
+		return spel.plaatsTegelsInStartkolom(gekozenTegels);
 	}
 
 }
